docs(examples): 💡 update example walkthroughs

--- a/docs/examples/06-streaming-progress.mdx
+++ b/docs/examples/06-streaming-progress.mdx
@@ -314,7 +314,7 @@ function AnalyzerUI({ document }) {
     Track tokens, elapsed time, and completion status
   </Card>
   <Card title="UI Integration" icon="display">
-    Connect streaming state to React UI components
+    Connect streaming state to Solid UI components
   </Card>
   <Card title="Chunked Processing" icon="layer-group">
     Process and display response as it arrives
