--- a/docs/examples/parallel-research.mdx
+++ b/docs/examples/parallel-research.mdx
@@ -123,7 +123,7 @@ bun run examples/04-parallel-research/agent.tsx "Topic 1" "Topic 2" "Topic 3"
 |------|------|-------------|
 | `name` | string | Unique identifier for the subagent |
 | `parallel` | boolean | Enable parallel execution (default: true) |
-| `children` | ReactNode | Claude components to execute |
+| `children` | JSX.Element | Claude components to execute |
 
 ## Best Practices
 
