--- a/docs/examples/research-pipeline.mdx
+++ b/docs/examples/research-pipeline.mdx
@@ -21,55 +21,56 @@ Named after the Simpsons character who keeps doing something until it works, the
 
 1. Render the JSX component to an XML plan
 2. Execute any pending `<Claude>` components
-3. When `onFinished` fires, it may update state (Zustand/React)
-4. State changes trigger a re-render, producing a new plan
+3. When `onFinished` fires, it may update state (Solid Signals/Store)
+4. State changes trigger a re-render via fine-grained reactivity, producing a new plan
+
 5. Repeat until no more `<Claude>` components need execution
 
 ```
 Initial Render -> Execute Claude -> State Change -> Re-render -> Execute Claude -> ...
 ```
 
-## State Management with Zustand
+## State Management with Solid Store
 
 ```tsx
-import { create } from 'zustand'
+import { createStore } from 'solid-js/store'
 
-const useResearchStore = create<ResearchState>((set, get) => ({
+const [state, setState] = createStore({
   phase: 'gather',
   sources: [],
   analysis: null,
+})
 
-  setSources: (sources) => set({ sources }),
-  setAnalysis: (analysis) => set({ analysis }),
+const actions = {
+  setSources: (sources) => setState({ sources }),
+  setAnalysis: (analysis) => setState({ analysis }),
   nextPhase: () => {
     const transitions = { gather: 'analyze', analyze: 'report', report: 'done' }
-    set({ phase: transitions[get().phase] })
+    setState('phase', transitions[state.phase])
   },
-}))
+}
 ```
 
 ## Phase Components
 
 Each phase is a separate component that:
-1. Reads current state from Zustand
+1. Reads current state from Store
 2. Renders a Claude component with phase-specific instructions
 3. Updates state in `onFinished` callback
 4. Triggers transition to next phase
 
 ```tsx
-function GatherPhase({ topic }) {
-  const { setSources, nextPhase } = useResearchStore()
-
+function GatherPhase(props) {
   return (
     <Claude
       tools={[webSearchTool]}
       onFinished={(result) => {
-        setSources(result.sources)
-        nextPhase() // Move to 'analyze'
+        actions.setSources(result.sources)
+        actions.nextPhase() // Move to 'analyze'
       }}
     >
       <Phase name="gather">
-        <Step>Search for sources about: {topic}</Step>
+        <Step>Search for sources about: {props.topic}</Step>
       </Phase>
     </Claude>
   )
@@ -81,18 +82,19 @@ function GatherPhase({ topic }) {
 The main component switches between phases based on state:
 
 ```tsx
-function ResearchPipeline({ topic }) {
-  const { phase } = useResearchStore()
-
-  switch (phase) {
-    case 'gather':
-      return <GatherPhase topic={topic} />
-    case 'analyze':
-      return <AnalyzePhase />
-    case 'report':
-      return <ReportPhase topic={topic} />
-    case 'done':
-      return null // Loop ends when no Claude components
+function ResearchPipeline(props) {
+  // Use a derived closure
+  return () => {
+    switch (state.phase) {
+      case 'gather':
+        return <GatherPhase topic={props.topic} />
+      case 'analyze':
+        return <AnalyzePhase />
+      case 'report':
+        return <ReportPhase topic={props.topic} />
+      case 'done':
+        return null // Loop ends when no Claude components
+    }
   }
 }
 ```
@@ -129,12 +131,12 @@ bun run examples/03-research-pipeline/agent.tsx "quantum computing applications"
   - No Claude components, loop ends
 ```
 
-## Why Zustand?
+## Why Solid Stores?
 
-Smithers recommends Zustand over `useState` for multi-phase agents:
+Smithers recommends Solid Stores over simple signals for multi-phase agents:
 
-1. **External state** - Zustand stores state outside React, making it accessible from `onFinished` callbacks
-2. **Predictable updates** - Direct mutations via actions, no batching surprises
+1. **External state** - Solid stores state outside the component tree, making it accessible from `onFinished` callbacks
+2. **Predictable updates** - Direct mutations via path syntax
 3. **Debugging** - Easy to inspect full state at any point
 4. **Testability** - Can reset/mock store state in tests
 
