--- a/reviews/20260118_105233_9988dfd.md
+++ b/reviews/20260118_105233_9988dfd.md
@@ -1,3 +1,5 @@
+**Scope:** trivial
+
 # Code Review for Commit 9988dfd
 
 **Date:** 2026-01-18 10:52:33
@@ -43,35 +45,36 @@ While the new issue documentation is excellent, the `ralph.ts` script has a few 
 
 #### 1. Commit Mixes Unrelated Changes
 
+-   **Status:** PARTIALLY ADDRESSED - ralph.ts moved to scripts/ in cbd3b9c but commit never split
 -   **Issue:** The commit combines documentation (`reviews/*.md` files) with a new, complex feature (`src/ralph.ts`). The commit message `docs(reviews): ...` accurately describes the documentation, but completely omits the introduction of the "Ralph" agent, which is a substantial piece of new code.
 -   **Impact:** This makes the git history harder to understand. A developer looking for when the `ralph` agent was added would not find it from the commit subject.
--   **Suggestion:** Split this into two separate commits:
-    1.  A `docs(reviews)` commit for the new `.md` files and the related `.gitmodules` change for `reference/opentui`.
-    2.  A `feat(ralph)` or `chore(dev-tools)` commit for `src/ralph.ts`.
+-   **Note:** While no longer actionable (history can't be rewritten), this serves as a reminder for future commits to maintain atomic, single-purpose commits.
 
-#### 2. Bug in `ralph.ts` Task Prioritization
+#### 2. Bug in `ralph.ts` Task Prioritization - **STILL UNFIXED**
 
--   **File:** `src/ralph.ts`
--   **Line:** 194
+-   **File:** `scripts/ralph.ts` (was moved from src/)
+-   **Line:** 159 (current location in scripts/ralph.ts)
 -   **Issue:** The `extractPriority` function is designed to parse task priority from the content of the review files. However, its regex looks for `Priority:` or `Status:`, while the newly added `.md` files use `Severity:`. It also doesn't recognize the `Critical` severity level.
     ```typescript
-    // src/ralph.ts:194
+    // scripts/ralph.ts:159
     const priorityMatch = content.match(/(?:Priority|Status)[:\s]*\*{0,2}(P[0-3]|HIGH|MEDIUM|LOW)(?:\s+PRIORITY)?\*{0,2}/i)
     ```
     For example, in `reviews/createcontainer-signature-mismatch.md`, the line is `**Severity:** Critical`. The regex will not match this.
--   **Impact:** All new review tasks will fall back to the default medium priority, defeating the purpose of the careful severity assessment in the markdown files. Critical issues will not be prioritized.
--   **Suggestion:** Update the regex and the priority map to correctly handle the `Severity` field and its values (like `Critical`).
+-   **Current Impact:** 13 review files use `Severity:` field with values like "Critical" and "P1 - High". All are defaulting to medium priority (2), defeating careful severity assessment. Critical reconciler issues are not being prioritized correctly.
+-   **Files Affected:** createcontainer-signature-mismatch.md, insertnode-reordering.md, orchestration-completion-misaligned.md, phase-registry-broken.md, plan-markers-not-wired.md, step-sequential-deadlock.md, stop-handling-starts-task.md, task-componentname-misuse.md, and others.
+-   **Fix Required:**
     ```typescript
-    // Suggested change in extractPriority
+    // In extractPriority function (line 159)
     const priorityMatch = content.match(/(?:Priority|Status|Severity)[:\s]*\*{0,2}(P[0-3]|HIGH|MEDIUM|LOW|CRITICAL)(?:\s+PRIORITY)?\*{0,2}/i)
 
-    // And in PRIORITY_MAP
+    // In PRIORITY_MAP (line 37)
     const PRIORITY_MAP: Record<string, number> = {
-      CRITICAL: 0, // Add this
+      CRITICAL: 0,  // Add this line
       P0: 0,
       // ... rest of the map
     }
     ```
+-   **Codebase Pattern:** Other review files in this repo use "Severity:" consistently. The extractPriority function should match the actual review file format, not the other way around.
 
 #### 3. Minor Code Quality Issues in `ralph.ts`
 
